--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,13 @@ message = "Starting App... Please wait."
 
 [dependency-groups]
 dev = ["tomlkit>=0.13.3"]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
